<resources>
    <string name="app_name">LS05</string>
    <string name="message">Please check your three favorite colors!</string>
    <string name="favorites">Is your favorite color a choice:</string>
    <string name="Yes">Yes!</string>
    <string name="No">No!</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
</resources>